--- a/HappyAnding/ShareExtension/Info.plist
+++ b/HappyAnding/ShareExtension/Info.plist
@@ -12,10 +12,10 @@
 				<integer>1</integer>
 			</dict>
 		</dict>
-		<key>NSExtensionMainStoryboard</key>
-		<string>MainInterface</string>
 		<key>NSExtensionPointIdentifier</key>
 		<string>com.apple.share-services</string>
+		<key>NSExtensionPrincipalClass</key>
+		<string>CustomShareNavigationController</string>
 	</dict>
 </dict>
 </plist>
