--- a/HappyAnding/HappyAnding/Info.plist
+++ b/HappyAnding/HappyAnding/Info.plist
@@ -2,8 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>Localization native development region</key>
-	<string>Korea</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
@@ -18,11 +16,17 @@
 		</dict>
 		<dict/>
 	</array>
+	<key>Localization native development region</key>
+	<string>Korea</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+	</array>
 	<key>URL Schemes</key>
 	<string>shortcutsZip</string>
 </dict>
