--- a/HappyAnding/HappyAnding/Info.plist
+++ b/HappyAnding/HappyAnding/Info.plist
@@ -25,6 +25,7 @@
 	</dict>
 	<key>UIBackgroundModes</key>
 	<array>
+		<string>fetch</string>
 		<string>remote-notification</string>
 	</array>
 	<key>URL Schemes</key>
