[Feat] #526 - Improve how font extensions work

--- a/HappyAnding/HappyAnding/Info.plist
+++ b/HappyAnding/HappyAnding/Info.plist
@@ -30,5 +30,12 @@
 	</array>
 	<key>URL Schemes</key>
 	<string>shortcutsZip</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Pretendard-Bold.otf</string>
+		<string>Pretendard-SemiBold.otf</string>
+		<string>Pretendard-Medium.otf</string>
+		<string>Pretendard-Regular.otf</string>
+	</array>
 </dict>
 </plist>
