[Feat] #528 - ReadShortcutView UI 구현
- SF Compact Rounded 폰트 추가
- SF Compact Rounded 폰트 선언
- ReadShortcutView에서 선언되는 폰트 선언

--- a/HappyAnding/HappyAnding/Info.plist
+++ b/HappyAnding/HappyAnding/Info.plist
@@ -36,6 +36,10 @@
 		<string>Pretendard-SemiBold.otf</string>
 		<string>Pretendard-Medium.otf</string>
 		<string>Pretendard-Regular.otf</string>
+		<string>SF-Compact-Rounded-Bold.otf</string>
+		<string>SF-Compact-Rounded-Semibold.otf</string>
+		<string>SF-Compact-Rounded-Medium.otf</string>
+		<string>SF-Compact-Rounded-Regular.otf</string>
 	</array>
 </dict>
 </plist>
